=== 1.5.1 (2023-01-13)

* Fix the support new classes and modules in Ruby 3.2 (jeremyevans)

=== 1.5.0 (2023-01-11)

* Support new classes and modules in Ruby 3.2 (jeremyevans)

* Set file and line for all eval calls, to ease debugging (jeremyevans)

=== 1.4.1 (2022-02-18)

* Freeze constants in reverse order, fixes issues with rubygems starting in Ruby 3.1.1 (jeremyevans)

=== 1.4.0 (2021-12-25)

* Support new classes and modules in Ruby 3.1 (jeremyevans)

* Support new classes and modules in Ruby 3.0 (jeremyevans)

=== 1.3.0 (2020-11-17)

* Support new classes and modules in Ruby 2.7 (jeremyevans)

=== 1.2.0 (2019-04-11)

* Support new classes and modules in Ruby 2.6 (jeremyevans)

=== 1.1.0 (2018-02-16)

* Support new classes and modules in Ruby 2.5 (jeremyevans)

* Work when the input field separator is changed from the default (jeremyevans) (#1)

=== 1.0.0 (2017-02-17)

* Initial Public Release