@@ -31,6 +31,7 @@ Errno::EAGAIN
 Errno::EALREADY
 Errno::EAUTH
 Errno::EBADF
+Errno::EBADMSG
 Errno::EBADRPC
 Errno::EBUSY
 Errno::ECANCELED
@@ -84,12 +85,14 @@ Errno::ENOTBLK
 Errno::ENOTCONN
 Errno::ENOTDIR
 Errno::ENOTEMPTY
+Errno::ENOTRECOVERABLE
 Errno::ENOTSOCK
 Errno::ENOTSUP
 Errno::ENOTTY
 Errno::ENXIO
 Errno::EOPNOTSUPP
 Errno::EOVERFLOW
+Errno::EOWNERDEAD
 Errno::EPERM
 Errno::EPFNOSUPPORT
 Errno::EPIPE
@@ -97,6 +100,7 @@ Errno::EPROCLIM
 Errno::EPROCUNAVAIL
 Errno::EPROGMISMATCH
 Errno::EPROGUNAVAIL
+Errno::EPROTO
 Errno::EPROTONOSUPPORT
 Errno::EPROTOTYPE
 Errno::ERANGE
@@ -169,7 +173,6 @@ Method
 Module
 Mutex
 NameError
-NameError::message
 NilClass
 NoMemoryError
 NoMethodError
@@ -216,4 +219,3 @@ TrueClass
 TypeError
 UnboundMethod
 ZeroDivisionError
-fatal
