@@ -7,7 +7,6 @@ Binding
 Class
 Comparable
 Complex
-Complex::compatible
 Data
 Date
 Dir
@@ -34,6 +33,7 @@ Errno::EAGAIN
 Errno::EALREADY
 Errno::EAUTH
 Errno::EBADF
+Errno::EBADMSG
 Errno::EBADRPC
 Errno::EBUSY
 Errno::ECANCELED
@@ -87,12 +87,14 @@ Errno::ENOTBLK
 Errno::ENOTCONN
 Errno::ENOTDIR
 Errno::ENOTEMPTY
+Errno::ENOTRECOVERABLE
 Errno::ENOTSOCK
 Errno::ENOTSUP
 Errno::ENOTTY
 Errno::ENXIO
 Errno::EOPNOTSUPP
 Errno::EOVERFLOW
+Errno::EOWNERDEAD
 Errno::EPERM
 Errno::EPFNOSUPPORT
 Errno::EPIPE
@@ -100,6 +102,7 @@ Errno::EPROCLIM
 Errno::EPROCUNAVAIL
 Errno::EPROGMISMATCH
 Errno::EPROGUNAVAIL
+Errno::EPROTO
 Errno::EPROTONOSUPPORT
 Errno::EPROTOTYPE
 Errno::ERANGE
@@ -198,7 +201,6 @@ MonitorMixin::ConditionVariable
 MonitorMixin::ConditionVariable::Timeout
 Mutex
 NameError
-NameError::message
 NilClass
 NoMemoryError
 NoMethodError
@@ -218,7 +220,6 @@ Random
 Range
 RangeError
 Rational
-Rational::compatible
 RbConfig
 Regexp
 RegexpError
@@ -251,6 +252,22 @@ Time
 TracePoint
 TrueClass
 TypeError
+URI
+URI::BadURIError
+URI::Error
+URI::Escape
+URI::FTP
+URI::Generic
+URI::HTTP
+URI::HTTPS
+URI::InvalidComponentError
+URI::InvalidURIError
+URI::LDAP
+URI::LDAPS
+URI::MailTo
+URI::Parser
+URI::REGEXP
+URI::REGEXP::PATTERN
+URI::Util
 UnboundMethod
 ZeroDivisionError
-fatal
