@@ -7,7 +7,6 @@ Binding
 Class
 Comparable
 Complex
-Complex::compatible
 Data
 Dir
 EOFError
@@ -33,6 +32,7 @@ Errno::EAGAIN
 Errno::EALREADY
 Errno::EAUTH
 Errno::EBADF
+Errno::EBADMSG
 Errno::EBADRPC
 Errno::EBUSY
 Errno::ECANCELED
@@ -86,12 +86,14 @@ Errno::ENOTBLK
 Errno::ENOTCONN
 Errno::ENOTDIR
 Errno::ENOTEMPTY
+Errno::ENOTRECOVERABLE
 Errno::ENOTSOCK
 Errno::ENOTSUP
 Errno::ENOTTY
 Errno::ENXIO
 Errno::EOPNOTSUPP
 Errno::EOVERFLOW
+Errno::EOWNERDEAD
 Errno::EPERM
 Errno::EPFNOSUPPORT
 Errno::EPIPE
@@ -99,6 +101,7 @@ Errno::EPROCLIM
 Errno::EPROCUNAVAIL
 Errno::EPROGMISMATCH
 Errno::EPROGUNAVAIL
+Errno::EPROTO
 Errno::EPROTONOSUPPORT
 Errno::EPROTOTYPE
 Errno::ERANGE
@@ -133,6 +136,7 @@ Gem
 Gem::BasicSpecification
 Gem::CommandLineError
 Gem::ConflictError
+Gem::Dependency
 Gem::DependencyError
 Gem::DependencyRemovalException
 Gem::DependencyResolutionError
@@ -198,7 +202,6 @@ MonitorMixin::ConditionVariable
 MonitorMixin::ConditionVariable::Timeout
 Mutex
 NameError
-NameError::message
 NilClass
 NoMemoryError
 NoMethodError
@@ -219,7 +222,6 @@ Random
 Range
 RangeError
 Rational
-Rational::compatible
 RbConfig
 Regexp
 RegexpError
@@ -252,7 +254,24 @@ Time
 TracePoint
 TrueClass
 TypeError
+URI
+URI::BadURIError
+URI::Error
+URI::Escape
+URI::FTP
+URI::Generic
+URI::HTTP
+URI::HTTPS
+URI::InvalidComponentError
+URI::InvalidURIError
+URI::LDAP
+URI::LDAPS
+URI::MailTo
+URI::RFC2396_Parser
+URI::RFC2396_REGEXP
+URI::RFC2396_REGEXP::PATTERN
+URI::RFC3986_Parser
+URI::Util
 UnboundMethod
 UncaughtThrowError
 ZeroDivisionError
-fatal
