@@ -7,12 +7,10 @@ Class
 ClosedQueueError
 Comparable
 Complex
-Complex::compatible
 Data
 Delegator
 DidYouMean
 DidYouMean::ClassNameChecker
-DidYouMean::ClassNameChecker::ClassName
 DidYouMean::Correctable
 DidYouMean::Formatter
 DidYouMean::Jaro
@@ -47,6 +45,7 @@ Errno::EAGAIN
 Errno::EALREADY
 Errno::EAUTH
 Errno::EBADF
+Errno::EBADMSG
 Errno::EBADRPC
 Errno::EBUSY
 Errno::ECANCELED
@@ -100,12 +99,14 @@ Errno::ENOTBLK
 Errno::ENOTCONN
 Errno::ENOTDIR
 Errno::ENOTEMPTY
+Errno::ENOTRECOVERABLE
 Errno::ENOTSOCK
 Errno::ENOTSUP
 Errno::ENOTTY
 Errno::ENXIO
 Errno::EOPNOTSUPP
 Errno::EOVERFLOW
+Errno::EOWNERDEAD
 Errno::EPERM
 Errno::EPFNOSUPPORT
 Errno::EPIPE
@@ -113,6 +114,7 @@ Errno::EPROCLIM
 Errno::EPROCUNAVAIL
 Errno::EPROGMISMATCH
 Errno::EPROGUNAVAIL
+Errno::EPROTO
 Errno::EPROTONOSUPPORT
 Errno::EPROTOTYPE
 Errno::ERANGE
@@ -194,8 +196,6 @@ IO::EINPROGRESSWaitReadable
 IO::EINPROGRESSWaitWritable
 IO::WaitReadable
 IO::WaitWritable
-IO::generic_readable
-IO::generic_writable
 IOError
 IndexError
 Integer
@@ -215,7 +215,6 @@ MonitorMixin
 MonitorMixin::ConditionVariable
 MonitorMixin::ConditionVariable::Timeout
 NameError
-NameError::message
 NilClass
 NoMemoryError
 NoMethodError
@@ -237,7 +236,6 @@ Random::Formatter
 Range
 RangeError
 Rational
-Rational::compatible
 RbConfig
 Regexp
 RegexpError
@@ -272,8 +270,25 @@ Time
 TracePoint
 TrueClass
 TypeError
+URI
+URI::BadURIError
+URI::Error
+URI::Escape
+URI::FTP
+URI::Generic
+URI::HTTP
+URI::HTTPS
+URI::InvalidComponentError
+URI::InvalidURIError
+URI::LDAP
+URI::LDAPS
+URI::MailTo
+URI::RFC2396_Parser
+URI::RFC2396_REGEXP
+URI::RFC2396_REGEXP::PATTERN
+URI::RFC3986_Parser
+URI::Util
 UnboundMethod
 UncaughtThrowError
 Warning
 ZeroDivisionError
-fatal
