@@ -7,11 +7,9 @@ Class
 ClosedQueueError
 Comparable
 Complex
-Complex::compatible
 Delegator
 DidYouMean
 DidYouMean::ClassNameChecker
-DidYouMean::ClassNameChecker::ClassName
 DidYouMean::Correctable
 DidYouMean::DeprecatedIgnoredCallers
 DidYouMean::Jaro
@@ -149,6 +147,7 @@ GC
 GC::Profiler
 Gem
 Gem::BasicSpecification
+Gem::BundlerVersionFinder
 Gem::CommandLineError
 Gem::ConflictError
 Gem::Dependency
@@ -190,6 +189,7 @@ Gem::StubSpecification
 Gem::StubSpecification::StubLine
 Gem::SystemExitException
 Gem::UnsatisfiableDependencyError
+Gem::Util
 Gem::VerificationError
 Gem::Version
 Hash
@@ -200,8 +200,6 @@ IO::EINPROGRESSWaitReadable
 IO::EINPROGRESSWaitWritable
 IO::WaitReadable
 IO::WaitWritable
-IO::generic_readable
-IO::generic_writable
 IOError
 IndexError
 Integer
@@ -221,7 +219,6 @@ MonitorMixin
 MonitorMixin::ConditionVariable
 MonitorMixin::ConditionVariable::Timeout
 NameError
-NameError::message
 NilClass
 NoMemoryError
 NoMethodError
@@ -243,7 +240,6 @@ Random::Formatter
 Range
 RangeError
 Rational
-Rational::compatible
 RbConfig
 Regexp
 RegexpError
@@ -278,10 +274,26 @@ Time
 TracePoint
 TrueClass
 TypeError
+URI
+URI::BadURIError
+URI::Error
+URI::Escape
+URI::FTP
+URI::Generic
+URI::HTTP
+URI::HTTPS
+URI::InvalidComponentError
+URI::InvalidURIError
+URI::LDAP
+URI::LDAPS
+URI::MailTo
+URI::RFC2396_Parser
+URI::RFC2396_REGEXP
+URI::RFC2396_REGEXP::PATTERN
+URI::RFC3986_Parser
+URI::Util
 UnboundMethod
 UncaughtThrowError
 UnicodeNormalize
 Warning
-Warning::buffer
 ZeroDivisionError
-fatal
