@@ -7,12 +7,9 @@ Class
 ClosedQueueError
 Comparable
 Complex
-Complex::compatible
 DidYouMean
 DidYouMean::ClassNameChecker
-DidYouMean::ClassNameChecker::ClassName
 DidYouMean::Correctable
-DidYouMean::DeprecatedMapping
 DidYouMean::Formatter
 DidYouMean::Jaro
 DidYouMean::JaroWinkler
@@ -142,8 +139,6 @@ Errno::NOERROR
 ErrorHighlight
 ErrorHighlight::CoreExt
 ErrorHighlight::DefaultFormatter
-ErrorHighlight::Spotter
-ErrorHighlight::Spotter::NonAscii
 Exception
 FalseClass
 Fiber
@@ -161,8 +156,6 @@ Gem
 Gem::BasicSpecification
 Gem::CommandLineError
 Gem::ConflictError
-Gem::ConsoleUI
-Gem::DefaultUserInteraction
 Gem::Dependency
 Gem::DependencyError
 Gem::DependencyRemovalException
@@ -195,26 +188,16 @@ Gem::Requirement
 Gem::Requirement::BadRequirementError
 Gem::RubyVersionMismatch
 Gem::RuntimeRequirementNotMetError
-Gem::SilentUI
 Gem::SourceFetchProblem
 Gem::SpecificGemNotFoundException
 Gem::Specification
-Gem::SpecificationPolicy
-Gem::StreamUI
-Gem::StreamUI::SilentDownloadReporter
-Gem::StreamUI::SilentProgressReporter
-Gem::StreamUI::SimpleProgressReporter
-Gem::StreamUI::ThreadedDownloadReporter
-Gem::StreamUI::VerboseProgressReporter
 Gem::StubSpecification
 Gem::StubSpecification::StubLine
 Gem::SystemExitException
-Gem::Text
 Gem::UninstallError
 Gem::UnknownCommandError
 Gem::UnknownCommandSpellChecker
 Gem::UnsatisfiableDependencyError
-Gem::UserInteraction
 Gem::Util
 Gem::VerificationError
 Gem::Version
@@ -249,7 +232,6 @@ Monitor
 MonitorMixin
 MonitorMixin::ConditionVariable
 NameError
-NameError::message
 NilClass
 NoMatchingPatternError
 NoMatchingPatternKeyError
@@ -282,7 +264,6 @@ Random::Formatter
 Range
 RangeError
 Rational
-Rational::compatible
 RbConfig
 Refinement
 Regexp
@@ -317,7 +298,6 @@ Thread::SizedQueue
 ThreadError
 ThreadGroup
 Time
-Time::tm
 TracePoint
 TrueClass
 TypeError
@@ -325,6 +305,4 @@ UnboundMethod
 UncaughtThrowError
 UnicodeNormalize
 Warning
-Warning::buffer
 ZeroDivisionError
-fatal
